2013-03-08  Guillaume Lazzara  <z@lrde.epita.fr>

	* doc/img/2dgrid.png: New. Add missing file.

2013-03-08  Guillaume Lazzara  <z@lrde.epita.fr>

	Update use of math::round.

	* mln/convert/impl/from_double_to_value.hh,
	* mln/convert/impl/from_float_to_value.hh: Here.

2013-03-08  Guillaume Lazzara  <z@lrde.epita.fr>

	* doc/.gitignore: exclude .dox files.

2013-03-08  Guillaume Lazzara  <z@lrde.epita.fr>

	Improve documentation in mln/canvas.

	* mln/canvas/browsing/backdiagonal2d.hh,
	* mln/canvas/browsing/diagonal2d.hh,
	* mln/canvas/browsing/dir_struct_elt_incr_update.hh,
	* mln/canvas/browsing/directional.hh,
	* mln/canvas/browsing/fwd.hh,
	* mln/canvas/browsing/snake_fwd.hh,
	* mln/canvas/browsing/snake_generic.hh: Here.

2013-03-08  Guillaume Lazzara  <z@lrde.epita.fr>

	Improve look'n feel of general documentation.

	* doc/Doxyfile.in: Improve documentation output.

	* doc/DoxygenLayout.xml: Update menu.

	* doc/Makefile.am: Rename .hh outputs to .dox.

	* doc/white-paper.tex: Fix URL.

2012-06-18  Guillaume Lazzara  <z@lrde.epita.fr>

	* doc/tutorial.tex: Add section about multifile compilation.

2012-05-23  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix a bug in a tutorial example.

	* doc/examples/split/tuto4_genericity_and_algorithms-4.cc.raw,
	* doc/examples/split/tuto4_genericity_and_algorithms-5.cc.raw: Update.

	* doc/examples/tuto4_genericity_and_algorithms.cc: Include last
	column and last row in computation.

2013-03-08  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix a typo.

	* doc/examples/box2d-bbox.cc,
	* doc/examples/split/box2d-bbox-1.cc.raw: Here.

2013-03-08  Guillaume Lazzara  <z@lrde.epita.fr>

	Add an illustration in Milena documentation.

	* doc/Makefile.am: Add new png figures.

	* doc/img/src/2dgrid.tikz,
	* doc/img/src/standalone.cfg,
	* doc/img/src/standalone.cls,
	* doc/img/src/ydoc.cfg,
	* doc/img/src/ydoc.cls: New.

	* doc/ref-guide.tex: Include tikz output.

2013-03-08  Guillaume Lazzara  <z@lrde.epita.fr>
