@@ -1,0 +1,70 @@
+// Copyright (C) 2013 EPITA Research and Development Laboratory (LRDE)
+//
+// This file is part of Olena.
+//
+// Olena is free software: you can redistribute it and/or modify it under
+// the terms of the GNU General Public License as published by the Free
+// Software Foundation, version 2 of the License.
+//
+// Olena is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+// General Public License for more details.
+//
+// You should have received a copy of the GNU General Public License
+// along with Olena.  If not, see <http://www.gnu.org/licenses/>.
+//
+// As a special exception, you may use this file as part of a free
+// software project without restriction.  Specifically, if other files
+// instantiate templates or use macros or inline functions from this
+// file, or you compile this file and link it with other files to produce
+// an executable, this file does not by itself cause the resulting
+// executable to be covered by the GNU General Public License.  This
+// exception does not however invalidate any other reasons why the
+// executable file might be covered by the GNU General Public License.
+
+#ifndef MLN_IO_MAGICK_INTERNAL_INIT_MAGICK_HH
+# define MLN_IO_MAGICK_INTERNAL_INIT_MAGICK_HH
+
+/// \file
+///
+/// \brief Initialize GraphicsMagick library.
+
+# include <Magick++.h>
+
+namespace mln
+{
+
+  namespace io
+  {
+
+    namespace magick
+    {
+
+      namespace internal
+      {
+
+	struct init_magick
+	{
+	  init_magick();
+	};
+
+# ifndef MLN_INCLUDE_ONLY
+
+	init_magick::init_magick()
+	{
+	  Magick::InitializeMagick(0);
+	}
+
+# endif // ! MLN_INCLUDE_ONLY
+
+      } // end of namespace mln::io::magick::internal
+
+    } // end of namespace mln::io::magick
+
+  } // end of namespace mln::io
+
+} // end of namespace mln
+
+
+#endif // ! MLN_IO_MAGICK_INTERNAL_INIT_MAGICK_HH
